Step 5: Replace Deprecated APIs (Task 003) - Compile: SUCCESS
- Util.java: new Locale(lang/country/variant) → Locale.of(lang/country/variant)
- IOUtil.java: new URL(resourceName) → URI.create(resourceName).toURL()
- UrlValidator.java: new URL(value) → URI.create(value).toURL()
- HttpClientImpl.java: new URL(this.url) → URI.create(this.url); url.getProtocol() → uri.getScheme()
- SalesforceAuthorizationHelper.java: new URL(String.format(...)) → URI.create(...).toURL()
- HttpConfiguration.java: new URL(getUrl()) → URI.create(getUrl()); url.getProtocol() → uri.getScheme()
- PBEWithMD5AndDESEncoder.java: remove dead Security.addProvider() code (SunJCE always present in Java 21)